--- a/eventit_src/public/index.html
+++ b/eventit_src/public/index.html
@@ -39,6 +39,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAWAOCuJiHVir6qkmAlV3n_JL4K1VmD06Y&libraries=places' async defer></script>
+    <script src='https://maps.googleapis.com/maps/api/js?key=' + apiKey + '&libraries=places' async defer></script>
   </body>
 </html>
