--- a/eventit_src/public/index.html
+++ b/eventit_src/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Eventit</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,6 +39,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src='https://maps.googleapis.com/maps/api/js?key=' + apiKey + '&libraries=places' async defer></script>
+
+
+    <!-- add your api key below-->
+    <script src='https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places' async defer></script>
   </body>
 </html>
